# CurlHttpClient

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: i_curl_http_client.h
source/: CMakeLists.txt
source/curl_http_client/: CMakeLists.txt  curl_http_client.cpp  curl_http_client.h
source/test/: CMakeLists.txt  main.cpp
source/test_email/: CMakeLists.txt  main.cpp
source/test_k8s/: CMakeLists.txt  main.cpp  utility.cpp  utility.h
thirdlib/sqlite-3.33.0/include/: sqlite3rc.h
